--- a/frontend/src/app/play/play.component.css
+++ b/frontend/src/app/play/play.component.css
@@ -6,7 +6,7 @@
     align-items: center;
     width: 100%;
     height: 70vh;
-    overflow: hidden;
+    overflow: auto;
   }
 
   .hero-text {
@@ -87,11 +87,9 @@
         height: auto;
         border-radius: 29px;
         display: block;
-        margin-top: 10px;
         padding: 10px 10px;
         background-color: transparent;
         border: none;
-        padding: 14px 20px;
         }
     .row {
         &:first-child {
@@ -124,8 +122,7 @@
 .board {
     position: relative;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
 }
 
 .overlay {
@@ -135,9 +132,10 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
     padding: 1rem;
     flex-wrap: wrap;
+    overflow: auto;
 }
 button {
     background-color: transparent;
@@ -275,11 +273,12 @@ button.bordered-box {
 }
 .background-image {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: 0;
-    border-radius: 10px;
     filter: brightness(0.4);
 }
 
